--- a/AppBanHangOnline/app/src/main/res/layout/cart_item.xml
+++ b/AppBanHangOnline/app/src/main/res/layout/cart_item.xml
@@ -27,7 +27,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins"
-            android:text="Item name"
+            android:text="Tên sản phẩm"
             android:textColor="@color/black"
             android:textSize="18sp"
             android:textStyle="bold" />
@@ -63,7 +63,7 @@
                 android:layout_marginStart="5dp"
                 android:textColor="@color/black"
                app:layout_constraintTop_toTopOf="@id/ivColor"
-
+android:visibility="gone"
                 app:layout_constraintStart_toEndOf="@id/ivColor"
                app:layout_constraintBottom_toBottomOf="@id/ivColor" />
 
