--- a/AppBanHangOnline/app/src/main/res/layout/cart_product_layout.xml
+++ b/AppBanHangOnline/app/src/main/res/layout/cart_product_layout.xml
@@ -3,22 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:backgroundTint="@color/g_white"
-    android:elevation="0dp">
+    android:backgroundTint="#E6E9EC"
+    android:elevation="0dp"
+    android:layout_marginTop="5dp"
+    >
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:padding="5dp"
+        >
 
-        <View
-            android:id="@+id/line"
-            android:layout_width="0dp"
-            android:layout_height="1dp"
-            android:layout_marginTop="10dp"
-            android:background="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <ImageView
             android:id="@+id/imageCartProduct"
@@ -27,7 +22,8 @@
             android:layout_marginBottom="5dp"
             android:scaleType="centerCrop"
             android:src="@color/g_blue"
-            app:layout_constraintBottom_toTopOf="@id/line"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
@@ -76,6 +72,7 @@
             app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
+            android:id="@+id/tvQuantity"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="1"
@@ -95,6 +92,7 @@
 
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/imageCartProductSize"
+            android:visibility="gone"
             android:layout_width="15dp"
             android:layout_height="15dp"
             android:layout_marginStart="5dp"
