--- a/AppBanHangOnline/app/src/main/res/navigation/shopping_graph.xml
+++ b/AppBanHangOnline/app/src/main/res/navigation/shopping_graph.xml
@@ -31,12 +31,19 @@
         <action
             android:id="@+id/action_cartFragment_to_productDetailFragment"
             app:destination="@id/productDetailFragment" />
+        <action
+            android:id="@+id/action_cartFragment_to_billingFragment"
+            app:destination="@id/billingFragment" />
     </fragment>
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.example.appbanhangonline.fragments.shopping.ProfileFragment"
         android:label="fragment_profile"
-        tools:layout="@layout/fragment_profile" />
+        tools:layout="@layout/fragment_profile" >
+        <action
+            android:id="@+id/action_profileFragment_to_addressFragment"
+            app:destination="@id/addressFragment" />
+    </fragment>
     <fragment
         android:id="@+id/productDetailFragment"
         android:name="com.example.appbanhangonline.fragments.shopping.ProductDetailFragment"
@@ -45,5 +52,28 @@
         <argument
             android:name="product"
             app:argType="com.example.appbanhangonline.data.Product" />
+    </fragment>
+    <fragment
+        android:id="@+id/addressFragment"
+        android:name="com.example.appbanhangonline.fragments.shopping.AddressFragment"
+        android:label="AddressFragment"
+        tools:layout="@layout/fragment_address"
+        />
+    <fragment
+        android:id="@+id/billingFragment"
+        android:name="com.example.appbanhangonline.fragments.shopping.BillingFragment"
+        android:label="BillingFragment"
+
+        tools:layout="@layout/fragment_billing"
+        >
+        <action
+            android:id="@+id/action_billingFragment_to_addressFragment"
+            app:destination="@id/addressFragment" />
+        <argument
+            android:name="totalFloat"
+            app:argType="float" />
+        <argument
+            android:name="products"
+            app:argType="com.example.appbanhangonline.data.CartProduct[]" />
     </fragment>
 </navigation>
