--- a/AppBanHangOnline/app/src/main/res/layout/fragment_product_detail.xml
+++ b/AppBanHangOnline/app/src/main/res/layout/fragment_product_detail.xml
@@ -133,6 +133,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
+                android:visibility="gone"
                 android:orientation="vertical">
 
                 <TextView
