--- a/AppBanHangOnline/app/src/main/res/layout/special_rv_item.xml
+++ b/AppBanHangOnline/app/src/main/res/layout/special_rv_item.xml
@@ -57,7 +57,7 @@
             android:layout_height="25dp"
             android:background="@drawable/blue_background"
             android:fontFamily="@font/poppins_light"
-            android:text="Add to cart"
+            android:text="Thêm vào giỏ"
             android:textColor="@color/white"
             android:textSize="10sp"
             android:textStyle="bold"
